--- a/source/_posts/2014-03-03-berlin.markdown
+++ b/source/_posts/2014-03-03-berlin.markdown
@@ -16,6 +16,8 @@ have the fun of running from one end of the airport to the other to catch your
 flight. I heard they're finally phasing it out; that cant happen soon enough
 IMO.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13575837835/in/set-72157643245435323" title="Alexanderplatz by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7329/13575837835_b631a6aafb_c.jpg" width="800" height="601" alt="Alexanderplatz S-Bahn Station"></a>
+
 <!-- more -->
 
 Once I'd gotten into Berlin and checked into my hostel I got in contact with my
@@ -82,16 +84,18 @@ played no part in it, and our history classes seemed to have been very biased
 towards things that Australia took part in, rather than important events that
 shaped the world as it is today.
 
-I never enjoyed history at school, but I now think that was largely because of
-the incredibly narrow focus that my small rural high school had in its classes.
-The stuff I've learned about while travelling about the history in a bunch of
-other countries has been fascinating. Far more interesting than hearing about
-Australia being slaughtered at Gallipoli for the hundredth time.
+I never really enjoyed history at school, but I now think that was largely
+because of the incredibly narrow focus that my small rural high school had in
+its classes.  The stuff I've learned about while travelling about the history in
+a bunch of other countries has been fascinating. Far more interesting than
+hearing about Australia being slaughtered at Gallipoli for the hundredth time.
 
 The Topography of Terror museum was another really good museum, covering the
 various groups involved in carrying out the atrocities of WWII. It focused a lot
 more on the "who" and what they did; some very interesting perspectives there,
 but again too much information to take it all in in only one visit.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13525606303/in/set-72157643245435323" title="Spaceman by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3799/13525606303_19c05ecd34_c.jpg" width="601" height="800" alt="Spaceman near Kottbusser"></a>
 
 Harmen and I then went to Kottbusser Tor, the suburb recommended to us by Carley
 earlier in the day, and found that although it seemed like an interesting suburb
@@ -111,9 +115,11 @@ face of so much competition?
 
 After dinner we went to a tapas bar for a while to soak in the bohemian/hipster
 vibe they had going on there, before heading over the bridge near Warschauer
-Strasse station into a district of old warehouses that had been converted into
+Straße station into a district of old warehouses that had been converted into
 bars, skate parks, climbing centres and all kinds stuff, all decorated outside
 with loads and loads of awesome graffiti.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13562682523/in/set-72157643245435323" title="Mural by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7022/13562682523_baf9b0ce7d_c.jpg" width="800" height="396" alt="Mural"></a>
 
 We found a nice little bar in what seemed to be a bit of a multi-purpose
 building. At various times I saw through different doors and I'm sure I saw 2-3
@@ -133,7 +139,6 @@ pipe without the piercing pitch. They two of them started doing some folk
 dancing. It was quite the cool little show. Brunswick hipsters, eat your heart
 out.
 
-
 Another day I went an walked along Karl-Marx Allee, a huge boulevard built by
 the GDR/DDR, I guess to show off how great communism is. It is lined with lots
 of massive buildings built during the early years of the Cold War.
@@ -142,8 +147,8 @@ of massive buildings built during the early years of the Cold War.
 
 There are some interesting communist "ads" on top of a few buildings,
 interesting because being communist meant there wasn't really a need for any
-advertising, there was no competition between companies, but there were ads for
-stuff in West Berlin and didn't want to be outdone by them.
+advertising since there was no competition between companies, but there were ads
+for stuff in West Berlin and didn't want to be outdone by them.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13525982215/in/set-72157643245435323" title="Communist era advertising by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7334/13525982215_8b0917a31b_c.jpg" width="800" height="601" alt="Communist era advertising"></a>
 
@@ -158,12 +163,12 @@ out a huge amount of nostalgia in me, so many great memories.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13538254253/in/set-72157643245435323" title="So much video game history by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3771/13538254253_f0fd2c472a_c.jpg" width="800" height="601" alt="So much video game history"></a>
 
-Some pieces of special note included the original Sega Master System, my first
+Some pieces of note included the original Sega Master System, my first
 every console,
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13527934633/in/set-72157643245435323" title="Sega Master System by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2859/13527934633_574d3fd060_c.jpg" width="800" height="450" alt="Sega Master System. NFI why it says Mark III, this was the one before the SMSII in Australia"></a>
 
-A virtual reality machine I have memories of paying way to much to have a turn
+A virtual reality machine I have memories of paying way too much to have a turn
 of at a video game arcade somewhere in Queensland when I was a kid,
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13528085255/in/set-72157643245435323" title="The first VR machine I ever saw and used back when I was a kid by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3756/13528085255_3da8f04e72_c.jpg" width="645" height="800" alt="The first VR machine I ever saw and used back when I was a kid"></a>
@@ -190,13 +195,14 @@ heavily street art focused.
 <a href="http://www.flickr.com/photos/lucasthenomad/13567379395/in/set-72157643245435323" title="Rainbow drips by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7273/13567379395_6fc9b174a3_c.jpg" width="800" height="601" alt="Rainbow drips"></a>
 
 On one of my many aimless explorations I stumbled upon some buskers playing in
-the street who were drawing quite a crowd.  A band called The Trouble Notes. One
-guy planing an electric violin, one guy finger picking the heck out of a guitar
-while also using it as a percussion instrument, and another dude sitting on a
-unique drum that was just kind of a square box. They had a very beautiful sound
-and were so damn good I stopped and listened to them for probably an hour.  I
-even bought a CD to support them, even though I have nothing to play it in! And
-I got a flyer for a show later in the month in a very hidden away warehouse.
+the street who were drawing quite a crowd.  A band called [The Trouble
+Notes](http://www.thetroublenotes.com/). One guy planing an electric violin, one
+guy finger picking the heck out of a guitar while also using it as a percussion
+instrument, and another dude sitting on a unique drum that was just kind of a
+square box. They had a very beautiful sound and were so damn good I stopped and
+listened to them for probably an hour.  I even bought a CD to support them, even
+though I have nothing to play it in! And I got a flyer for a show later in the
+month in a very hidden away warehouse.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13553720455/in/set-72157643245435323" title="The Trouble Notes are awesome! by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2818/13553720455_f90767f22c_c.jpg" width="679" height="800" alt="The Trouble Notes are awesome!"></a>
 
@@ -208,79 +214,154 @@ were instruction in the front explaining all the different arrows.  With this
 Nicole A was able to successfully make the animal! (I thought only men didn't
 read instructions, but now I know better :P)
 
-exploring grafiti around warschauer, east side gallery.
-
 <a href="http://www.flickr.com/photos/lucasthenomad/13562823055/in/set-72157643245435323" title="Fancy car and a colourful wall by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5457/13562823055_133c3262f8_c.jpg" width="800" height="357" alt="Fancy car and a colourful wall"></a>
 
-<a href="http://www.flickr.com/photos/lucasthenomad/13563950605/in/set-72157643245435323" title="Trabants by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2816/13563950605_04431b441e_c.jpg" width="800" height="752" alt="Trabants"></a>
+I spent an entire day exploring the street art around Warschauer Straße
+Station, in and amongst the converted warehouse along Revaler Straße. The area
+oozes creativity, with nearly every surface being covered in a colourful mural
+and most of the people looked like the sorts of folk my dad would look at
+disapprovingly as dirty hippies, my kind of people :)
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13564232873/in/set-72157643245435323" title="Berlin by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3724/13564232873_e9b584efaf_c.jpg" width="800" height="447" alt="Berlin"></a>
 
+I walked along the nearby East Side Gallery, a 1.3km long section of the wall
+that is not used as an open air art gallery. There over 100 painting, all of
+them huge. There was also a whole row of Trabants, the car of East Germany,
+parked along the side the wall.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13563950605/in/set-72157643245435323" title="Trabants by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2816/13563950605_04431b441e_c.jpg" width="800" height="752" alt="Trabants"></a>
+
+I walked the whole length of the wall and then some of the backside as well and
+was lucky enough to come upon a bunch of artists spending their Sunday afternoon
+painting the backside of the wall and having a few beers. Work in progress
+
 <a href="http://www.flickr.com/photos/lucasthenomad/13564854475/in/set-72157643245435323" title="Sunday drinks while painting the wall by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3679/13564854475_694238308f_c.jpg" width="800" height="290" alt="Sunday drinks while painting the wall"></a>
 
-real berlin walking tour, strong focus on grafiti and street art. goot to have
-specific artists pointedout and then start recognising their work around the
-city. learned some more about the berlin wall. interesting tidbit about west
-belin being the only part of west germany that didn't have conscription, so all
-the liberals migrated there, which may explain the very liberal culture that
-exists there today. learned how developers are now developing along the lovely
-green strip behind the long strip of wall that makes up the east side gallery,
-what a fuck up. 
-I think our guide must have been well connected in with
-the street art community based on how much he seemed to know about individual
-artists, techniques, etc. I almost suspect I might be one of the artists,
-although he denied it when I asked.
+Another day I went on a "Real Berlin Walking Tour", as recommended by a friend
+who lived in Berlin briefly. The tour had a strong focus on graffiti and street
+art, which I didn't know about beforehand and meant we went to several places
+I'd already checked out. It was great a knowledgeable guide there to point
+specific artists works and styles, and then start recognising their stuff all
+around the city.
 
-<a href="http://www.flickr.com/photos/lucasthenomad/13565480803/in/set-72157643245435323" title="Garbage Elephant by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7131/13565480803_2d4637d7f0_c.jpg" width="600" height="800" alt="Garbage Elephant"></a>
+<a href="http://www.flickr.com/photos/lucasthenomad/13565480803/in/set-72157643245435323" title="Garbage Elephant by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7131/13565480803_2d4637d7f0_c.jpg" width="600" height="800" alt="Garbage Elephant by a crew who make art from stuff they find on the street"></a>
+
+I think our guide must have been well connected in with the street art community
+based on how much he seemed to know about individual artists, techniques, etc. I
+almost suspect he may have been one of the artists, although he denied it when I
+asked.
+
+On the tour I learned some more about the Berlin wall and the Cold War. One
+interesting titbit I picked up was that West Berlin was the only part of West
+Germany that didn't have conscription, which led to many of the liberals
+migrating there, which could explain the very liberal culture that exists there
+today.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13565231714/in/set-72157643245435323" title="Eyesore being built right between the wall and the river by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7038/13565231714_49c68617c3_c.jpg" width="800" height="391" alt="Eyesore being built right between the wall and the river"></a>
+
+I also learned how property developers have been allowed to start developing
+along the lovely green strip behind the long strip of wall that makes up the
+East Side Gallery, what a fuck up! I thought the one building that was in
+progress when I walked along there was a horribly inconvenient eye sore, meaning
+you could no longer walk along the full length of both sides of the wall. To
+find out they're now planning on building along most of that strip, including a
+section currently occupied by an African Youth support centre who are being
+evicted, is terrible.  Wikipedia even tells me they're going to knock down
+extensive segments of the gallery.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13567274875/in/set-72157643245435323" title="Fuck off Media Spree by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2810/13567274875_d3de7017e6_c.jpg" width="800" height="450" alt='"Fuck off Media Spree", the developers fucking up the Gallery'></a>
+
+Another day I visited the Deutsches Technikmuseum, the German Museum of
+Technology. I love science and technology museums as a rule, although this one
+had such a heavy focus on trains and planes that you could be forgiven for
+thinking it was a transport museum.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13568945104/in/set-72157643245435323" title="This musuem had a crazy number of planes in it by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2807/13568945104_6685df757b_c.jpg" width="601" height="800" alt="This musuem had so many planes they needed to mount this one vertically"></a>
+
+I especially liked this jet engine that was opened up so I could poke my head
+inside and get an idea of the insides of one of those things and how the
+"reverse thrust" thing planes do to stop actually works. I've since tried to
+look out the window as a flight was landing to try and see this in action but
+the wing gets in the way. :(
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13568499815/in/set-72157643245435323" title='Jet engine, the back is open in the "braking" position by Lucas the nomad, on Flickr'><img src="http://farm8.staticflickr.com/7408/13568499815_3175e0b7e5_c.jpg" width="800" height="601" alt='Jet engine, the back is open in the "braking" position'></a>
+
+Admittedly there were some other smaller sections about old bicycles, medicine,
+photography, old mechanical computers and televisions.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13567596055/in/set-72157643245435323" title="Wooden bike by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7077/13567596055_f5671ee900_c.jpg" width="800" height="601" alt="Wooden bike, totally hipster"></a>
+
+Some of the old televisions had Cathode Ray tubes so long that they would
+orienty them with the screen facing the ceiling, and then use a 45º mirror to
+flip the image so a sitting viewer could watch it. To think today there are
+2+ metre televisions that are only a few cm thick... The progress of technology
+is awesome!
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13567824574/in/set-72157643245435323" title="Antique televisions. They're vertical with a mirror because the cathode ray tube was so long. by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2837/13567824574_fa301998a0_c.jpg" width="601" height="800" alt="Antique televisions. They're vertical with a mirror because the cathode ray tube was so long."></a>
+
+One evening while I was still staying with the two Nicoles, I went and saw The
+Trouble Notes do a live show with them and a friend of theirs. The venue was an
+old building hidden down a very dark alley, surrounded by building that felt
+like they were largely abandoned. It felt like the kind of place you went down
+to get stabbed, but it turned out ok for us. The Trouble Notes put on very good
+show, even if the support act was a bit too emo and the venue was super smoky.
+It really feels like I got in a time machine and went back 20 years to be back
+in a place where you can smoke in public venues.
 
 
-deutch technology museum. heavy focus on planes and trains, but also some
-interesting stuff about medicine, old bikes, photography, old mechanical
-computers and television. 
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13565480803/in/set-72157643245435323" title="Garbage Elephant by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7131/13565480803_2d4637d7f0_c.jpg" width="600" height="800" alt="Garbage Elephant"></a>
-
-rant about audioguides. only covered 25 things in the whole musuem, but then
-waffeled on for like 10 minutes about each one. 
-
-went and saw the trouble notes do a live show with the two nicoles and a friend
-of theirs. venue an old building hidden down a dark alley, surrounded by
-building that felt like they were laregly abandoned. very good show, even if the
-support was super emo and the venue was super smokey. feels like I got in a time
-machine to be back in a place where you can smoke in public venues.
-
-pergamont museum, huge babalonian gate, ancient temple from turkey. lack of any
-information in english and I didn't get an audio guide because of my last
-expeience with one.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13570336943/in/set-72157643245435323" title="Ishtar Gate by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7338/13570336943_508a1c623f_c.jpg" width="601" height="800" alt="Ishtar Gate"></a>
-
-pergamont gate on display is actually the smaller, rear-side of the gate. the
-front must have been epic.
+I spent a few days exploring the various museums on the Museum Island. First up
+was the Pergamon museum, which has in it's collection a giant Babylonian gate,
+and an ancient temple plundered from turkey.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13570513833/in/set-72157643245435323" title="Pergamon Altar by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7315/13570513833_b093193675_c.jpg" width="800" height="601" alt="Pergamon Altar"></a>
 
-the new musuem was great, I thought the building itself was super interesting,
-each room styled differently and uniquely. lots of it reconstructee after the
-war. felt too old to be calling the new museum.
+I read up and learnt that the Babylonian gate on display is actually the
+smaller, rear-side of the entrance way. The front must have been absolutely
+epic!
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13570336943/in/set-72157643245435323" title="Ishtar Gate by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7338/13570336943_508a1c623f_c.jpg" width="601" height="800" alt="Ishtar Gate"></a>
+
+The New Musuem was great, I found the building itself to be very interesting,
+with each room styled differently and quite uniquely. Much of it has been
+reconstructed since the war. It's funny, the place felt too old to be calling it
+the new museum.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13570806863/in/set-72157643245435323" title="More plundered loot by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2816/13570806863_91ff2f0594_c.jpg" width="800" height="601" alt="More plundered loot"></a>
 
-oddly, the inside of the old museum I found very dull and streile.
+I also went to the Old Museum which looks majestic from the outside, but I felt
+the inside of the building lacked any real character and was rather dull and
+sterile.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13570964433/in/set-72157643245435323" title="The old museum by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3675/13570964433_e1959ec409_c.jpg" width="800" height="601" alt="The old museum"></a>
 
-richstark (the german parliment), track work meant that I was pretty late to my
-appointment. I'd left home cutting things fine, but didn't know that there was
-trackwork and no trains running on a line I needed to use meant I ended up going
-to another station near by and had to run to get there, all the while being
-mobbed by deaf street collectors (who I suspect are just gypsys who have worked
-out a way to not need to speak any particular language to make you feel like you
-need to give them money, but I'm cynical).
+One morning I booked in to visit the Reichstag Building (the German Parliament),
+a building with an impressive glass dome on top of it, which you can go up for a
+nice view. It's free but you have to book online in advance.
+
+Surprise track work meant that I was pretty late, I'd left home cutting things
+pretty fine according to Google maps estimations, but then there were no trains
+running on the line I needed to change to, so I had to go to another station on
+a different line, then practically run to try and get there near the time I was
+scheduled to, all the while being mobbed by supposedly deaf street collectors.
+
+They hand you a card with a little statement in a bunch of languages asking you
+to sign their clipboard (petition? I cant remember), then if you don't read that
+clipboard you suddenly find you've signed up to make a donation.  Call me a
+cynic, but those deaf collectors look just like the gypsies in every other city
+in Europe.  I suspect they've just come up with a new way of extracting money
+from people without having to speak any language in particular.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13571856715/in/set-72157643245435323" title="Reichstag Building by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3747/13571856715_cd8f850ee4_c.jpg" width="800" height="601" alt="Reichstag Building"></a>
 
-great view of the city, automatic audioguide as you walk up the dome.
+It was a very impressive building, the inside of the dome containing a structure
+of mirrors to collect and reflect light down into the parliament, lessening the
+need for artificial lighting.
+
+There was a ramp spiralling up around the dome, with an audio guide that is
+automatically activated as you walk around, giving you a great (but hard to
+photograph) view of the city in all directions.
+
+
 checkpoint charlie museum. way better than I expected. lots of intresting
 stories about escapes hidden in cars, welding machines, a pair of suitcases side
 by side, balloons, gliders. the musuem was actually huge, but i think the layout
@@ -331,6 +412,10 @@ bursting with an odd sort of positivity, so even at the end of a shitty day she
 was still enthusiastic, but not in the "look on the bright side" way, more in
 the "fuck that fuckface, and have a great day" way
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13576145783/in/set-72157643245435323" title="Me and the two Nicoles, hiding out behind a tea fort by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2835/13576145783_14b4d46382_c.jpg" width="765" height="800" alt="Me and the two Nicoles, hiding out behind a tea fort"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13576132425/in/set-72157643245435323" title="Nicole and Nicole are lovely people by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3798/13576132425_d19510e3d9_c.jpg" width="800" height="601" alt="Nicole and Nicole are lovely people"></a>
+
 moved to a hostel which was almost completely full of australians, aside from
 the one staff member there.
 
@@ -365,12 +450,18 @@ looking little indoor market.
 couch surfing with amber. nice girl, spacy. mikeller pop up bar
 
 go otu for breakfast at a place called melbourne canteen, then head to spreepark
-(other blog post [blogged about here](http://www.lucasthenomad.com/2013/12/05/spreepark-berlin)
+(other blog post [blogged about here](http://www.lucasthenomad.com/2013/12/05/spreepark-Berlin)
 
 go out for japanese and then go to open mic night
 
 went to charlottenburg schloss, but it was monday so the building was closed.
 explored the gardens, beautiful light frosting on the parts in the shade
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13575101705/in/set-72157643245435323" title="Charlottenburg Palace by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3828/13575101705_f688cbbd87_c.jpg" width="800" height="601" alt="Charlottenburg Palace"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13575266765/in/set-72157643245435323" title="Charlottenburg Palace gardens by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7113/13575266765_a2c54864c0_c.jpg" width="800" height="601" alt="Charlottenburg Palace gardens"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13575465633/in/set-72157643245435323" title="Charlottenburg Palace gardens by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7233/13575465633_0a3d226a0e_c.jpg" width="800" height="601" alt="Charlottenburg Palace gardens"></a>
 
 amazing pork knuckle, random 20% discount, tipped it right back again
 
@@ -383,16 +474,34 @@ and creamy like egg nog, super sweet, with whipped cream on the top). even
 gluhbeir which was rich and sweet. ate some tasty shredded pork, and a bag of
 donut hole things. felt sick from all the sweet stuff.
 
-berlin wall memorial. bits of the multiple layers of wall, an old street cut off
+<a href="http://www.flickr.com/photos/lucasthenomad/13575685933/in/set-72157643245435323" title="Christmas Markets by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7378/13575685933_404c26c7ae_c.jpg" width="800" height="450" alt="Alexanderplatz Christmas Markets"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13576063984/in/set-72157643245435323" title="Gluhwein! by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7368/13576063984_d6d4128944_c.jpg" width="800" height="601" alt="Gluhwein!"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13576186964/in/set-72157643245435323" title="Christmas Markets by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3694/13576186964_b29f3390fb_c.jpg" width="800" height="601" alt="Alexanderplatz Christmas Markets"></a>
+
+Berlin wall memorial. bits of the multiple layers of wall, an old street cut off
 by the wall. rebuilt secition with both complete walls, guard tower and lights.
 viewing platform in the west letting you see into the east?
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13576273754/in/set-72157643245435323" title="Bergstraße, the last street still cut off by the Berlin wall by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3730/13576273754_865530b401_c.jpg" width="800" height="601" alt="Bergstraße, the last street still cut off by the Berlin wall"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13576308664/in/set-72157643245435323" title="Me and the wall by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3756/13576308664_0f9c9a2677_c.jpg" width="800" height="450" alt="Me and the wall"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13576371664/in/set-72157643245435323" title="Deadzone through a crack in the wall by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7348/13576371664_0933a8fc86_c.jpg" width="800" height="601" alt="Deadzone through a crack in the wall"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13576109973/in/set-72157643245435323" title="Wall reconstuction as seen from the viewing platform by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3819/13576109973_71720c6006_c.jpg" width="800" height="601" alt="Wall reconstuction as seen from the viewing platform"></a>
+
 buildings along the border with doors on both sides. eventually bricked up the
 west, evicted the people, demolished. old metro station were the trains went
-under east berlin center that got bricked up and abandoned, but now in use
+under east Berlin center that got bricked up and abandoned, but now in use
 
 move christmas markets, pranzlaurberg, charlotenburg. much less fun-parky, and a
 better range of food and stuff. lots of sweedish and finland stalls, clothes and
 nicknacks. epic roast dinner, then a huge hungarian donut thing
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13576227415/in/set-72157643245435323" title="Swinging Barbecue by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7397/13576227415_9b6456df0d_c.jpg" width="800" height="601" alt="Swinging Barbecue"></a>
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13576305803/in/set-72157643245435323" title="Charlottenburg Palace Christmas Market by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3798/13576305803_c78197835f_c.jpg" width="800" height="601" alt="Charlottenburg Palace Christmas Market"></a>
 
 off to the airport to fuly to barcelona
